- updated config for jdk8